; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/elftoolchain/libelftc/extr_libelftc_dem_arm.c_init_demangle_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/elftoolchain/libelftc/extr_libelftc_dem_arm.c_init_demangle_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.demangle_data = type { i32, i32, i32, i32, i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32* }

@ENCODE_FUNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.demangle_data*)* @init_demangle_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_demangle_data(%struct.demangle_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.demangle_data*, align 8
  store %struct.demangle_data* %0, %struct.demangle_data** %3, align 8
  %4 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %5 = icmp eq %struct.demangle_data* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %40

7:                                                ; preds = %1
  %8 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %9 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %8, i32 0, i32 0
  store i32 0, i32* %9, align 8
  %10 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %11 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %10, i32 0, i32 1
  store i32 0, i32* %11, align 4
  %12 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %13 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %12, i32 0, i32 2
  store i32 0, i32* %13, align 8
  %14 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %15 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %14, i32 0, i32 3
  store i32 0, i32* %15, align 4
  %16 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %17 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %16, i32 0, i32 7
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i32* null, i32** %18, align 8
  %19 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %20 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %19, i32 0, i32 7
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  store i64 0, i64* %21, align 8
  %22 = load i32, i32* @ENCODE_FUNC, align 4
  %23 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %24 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %23, i32 0, i32 6
  store i32 %22, i32* %24, align 8
  %25 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %26 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %25, i32 0, i32 4
  %27 = call i32 @vector_str_init(i32* %26)
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %40

30:                                               ; preds = %7
  %31 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %32 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %31, i32 0, i32 5
  %33 = call i32 @vector_str_init(i32* %32)
  %34 = icmp eq i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %30
  %36 = load %struct.demangle_data*, %struct.demangle_data** %3, align 8
  %37 = getelementptr inbounds %struct.demangle_data, %struct.demangle_data* %36, i32 0, i32 4
  %38 = call i32 @vector_str_dest(i32* %37)
  store i32 0, i32* %2, align 4
  br label %40

39:                                               ; preds = %30
  store i32 1, i32* %2, align 4
  br label %40

40:                                               ; preds = %39, %35, %29, %6
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @vector_str_init(i32*) #1

declare dso_local i32 @vector_str_dest(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
